tests/diagnostics/pop_non_vec.kal
# pop's argument must be a Vec.
{ let mut x: i64 = 5; pop(x); };
